--- a/deno.json
+++ b/deno.json
@@ -20,13 +20,14 @@
     "@tajpouria/cors": "jsr:@tajpouria/cors@^1.2.1",
     "@tanstack/react-table": "npm:@tanstack/react-table@^8.20.5",
     "@tanstack/react-virtual": "npm:@tanstack/react-virtual@^3.11.0",
+    "@tanstack/virtual-core": "npm:@tanstack/virtual-core@^3.11.2",
     "@types/lodash": "npm:@types/lodash@^4.17.13",
     "@types/react": "npm:@types/react@^18.3.12",
     "@types/react-dom": "npm:@types/react-dom@^18.3.1",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.4",
     "lodash": "npm:lodash@^4.17.21",
-    "react": "npm:react@^18.3.1",
-    "react-dom": "npm:react-dom@^18.3.1",
+    "react": "npm:react@^19.0.0",
+    "react-dom": "npm:react-dom@^19.0.0",
     "sift": "npm:sift@^17.1.3",
     "swr": "npm:swr@^2.2.5",
     "vite": "npm:vite@^6.0.1",
