--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,10 @@
   "imports": {
     "@anatine/zod-mock": "npm:@anatine/zod-mock@^3.13.4",
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.0",
+    "@dnd-kit/core": "npm:@dnd-kit/core@^6.3.1",
+    "@dnd-kit/modifiers": "npm:@dnd-kit/modifiers@^9.0.0",
+    "@dnd-kit/sortable": "npm:@dnd-kit/sortable@^10.0.0",
+    "@dnd-kit/utilities": "npm:@dnd-kit/utilities@^3.2.2",
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
     "@tajpouria/cors": "jsr:@tajpouria/cors@^1.2.1",
     "@tanstack/react-table": "npm:@tanstack/react-table@^8.20.5",
